--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
-
 <html>
- <body style = "font family :trebuchet ms;color:red;background:blue;">
-  <h1> Lord Sir Shiven Aaarya of Bowdonshire</h1>
-  <h2> is swag and has noice banter</h2>
-  <h3> and is an inspiration to be cool</h3>
-  Banter level: <span style - "color;green;">extreme</span>
-  </body> 
-  </html>
 
+	<head>
+		<title>Jobson Jobsworth CV</title>
+	</head>
 
+	<body style="background-color:grey; color:orange; font-family:arial;">
+
+	<h1>Jobson Jobsworth</h1>
+
+	<button onclick="location='index.html'" style="color:grey; background-color:orange">CV</button>
+	<button onclick="location='second.html'" style="color:grey; background-color:orange">Image Gallery</button>
+	<button onclick="location='third.html'" style="color:grey; background-color:orange">Third Webpage</button>
+	<button onclick="location='fourth.html'" style="color:grey; background-color:orange">Position Test</button>
+	<button onclick="location='quiz.html'" style="color:grey; background-color:orange">Quiz</button>
+	<hr style="border-color:orange">
+	
+	<br>
+	<br>
+
+	<img src="assets/suit.jpg"> <br>
+
+	<br>
+
+	Address: Permanently residing at the Jobcentre <br>
+	Email: JobsonJobsworth@gmail.com <br>
+	Twitter: @JobsonJobsworth <br>
+
+	<br>
+
+	I am a decisive, capable, punctual, ambitious, courteous, enthusiastic, trustworthy, determined, intelligent, keen, hard-working, friendly, industrious, dynamic, motivated and careful individual, and can work well on my own or as part of a team. <br>
+	I offer a mature and responsible attitude towards working, together with an adaptable approach, which means I can be immature and irresponsible whenever necessary.<br>
+	 
+	<br>
+	 
+	<h3>Employment & Responsibilities</h3> <br>
+
+	<br>
+
+	<b>2007 - 2010:  Pizza Delivery Guy</b> <br>
+	Responsibilities included delivering pizzas to people who ordered pizzas and also, to demonstrate my initiative, delivering pizzas to people who didn’t order pizzas. <br>
+	 
+	<br>
+
+	<b>2006 - 2007:  Pizza Delivery Girl</b> <br>
+	As above, except - in order to obtain more tips - whilst wearing a rather fetching curly brunette wig.<br>
+
+	<br>
+	  
+	<b>2003 - 2006:Computer Programmer</b> <br>
+	Proficient in C, C+, C++, C#, C##, C#+# and C#*#+$%^£$!(“@#!! <br>
+
+	<br>
+	 
+	<b>1998 - 2003: Proofreader</b> <br>
+	Proffred ceveral teknical bokos aswe all nkow thear ar count less misteaks inn tem. I was sacked when I admitted I didn’t actually read the books as I waited for the film adaptations instead. Perhaps I missed the point but at least I didn’t miss the excellent C++ In a Nutshell: The Movie <br>
+
+	<br>
+	 
+	<b>1990 - 1998: Self-Employed Air Guitar Teacher</b> <br>
+	Taught Air Guitar to competitors of the Air Guitar World Championships. Unfortunately my students were useless as they kept breaking the strings and losing the plectrums. <br>
+
+	<br>
+
+	<b>1980 - 1989:  Chair</b> <br>
+	I was a sturdy chair in a busy city centre café. Had numerous compliments of being surprisingly comfortable. It was just a shame I couldn’t sit on myself. I know this because I tried. Many times. <br>
+
+	<br>
+	 
+	<h3>Education:</h3> <br>
+
+	<br>
+
+	<b>1972 - 1980: Some secondary school, somewhere or other.</b> <br>
+	Strong like bull - A <br>
+	Quick like cat - C <br>
+	Quiet like mouse - F <br>
+
+	<br>
+
+	<b>1965 - 1972: Some primary school, somewhere or other.</b> <br>
+	17 <span style="color:gold">gold</span> stars <br>
+	29 <span style="color:silver">silver</span> moons<br>
+	364 <span style="color:#B87333">bronze</span> meteors <br>
+
+	<br>
+	 
+	<h3>Other skills</h3> <br>
+
+	<br>
+
+	I am an experienced first-aider with only two deaths to my name. <br>
+	I am typing proficient, skilled at a proven 11 wpm. Please note that this decreases to 1.76 wpm after a glass of Glenbenloch. <br>
+	I am also a firm believer in charity work and so I am very pleased when other people do it. <br>
+
+	<br>
+
+	<a href = "second.html" style="color:orange;">Second Page</a>
+	<br>
+	<a href="third.html" style="color:orange;">Third Webpage</a>
+
+	</body>
+
+</html>
